@@ -4,6 +4,7 @@ Phoronix Test Suite (Git)
 
 - pts-core: Add VDPAU as a dependency to the xorg-video external dependency on more platforms
 - pts-core: Don't check OpenBenchmarking.org credentials when the network is down
+- pts-core: Rework result-file-to-text sub-command, show text-based graph results
 - phodevi: Improve NVIDIA binary driver GPU utilization detection
 - pts_Graph: Few minor graph alignment corrections
 
